fixing spacing

--- a/query-connector/src/app/queryBuilding/queryBuilding.module.scss
+++ b/query-connector/src/app/queryBuilding/queryBuilding.module.scss
@@ -39,7 +39,9 @@
 
 .customQueryWrapper {
   background-color: white;
-  padding: 1.5rem;
+  padding-top: 1.5rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
   border: solid #DFE1E2;
   border-radius: 0.25rem;
   box-shadow: 0 0.125rem 0.1875rem 0 #F3F3F3;
